# Qcv

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Qcv.qrc
app/include/: image_view.h  image_view_impl.h  main_window.h
app/rc/: main_window.qss
app/src/: image_view.cc  image_view_impl.cc  main.cc  main_window.cc
cmake/: msvs.cmake
core/: CMakeLists.txt  manager.cc
core/include/: def.h  feature.h  image_source.h  manager.h  object.h
lib/: CMakeLists.txt
lib/capture/: CMakeLists.txt
lib/capture/picture/: CMakeLists.txt
lib/capture/picture/include/: picture.h
lib/capture/picture/src/: picture.cc
lib/feature/: CMakeLists.txt
lib/feature/gray/: CMakeLists.txt
lib/feature/gray/include/: gray_feature.h
lib/feature/gray/src/: gray_feature.cc
lib/gray/: CMakeLists.txt  gray.qrc
lib/gray/src/: gray_feature.cc
